# spirit-platform

./: CHANGELOG.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  rc-validation.yml
docs/reference/: EXCHANGE_PLUGIN_GUIDE.md
docs/reference/platform/: STRATEGY_LLM_CONTEXT.md  WRITING_A_STRATEGY.md
src/spirit/: __init__.py  backfill.py  config.py  context.py  context_manager.py  data_types.py  health.py  logger.py  main.py  pending_order_manager.py  runtime_lock.py  setup.py  strategy_config.py  strategy_registry.py  trade_logic.py  trade_signal.py  trade_status.py  trade_types.py  uninstall.py  web.py
src/spirit/exchange/: __init__.py  executor.py  kraken.py  protocol.py
src/spirit/pipeline/: __init__.py  daemon_health.py  event_bus.py  freshness_cache.py  readiness_gate.py  ws_event_bus.py
src/spirit/storage/: __init__.py  pairs.json  sqlite_schema.sql
src/spirit/strategies/: __init__.py  base.py
src/spirit/strategies/examples/: macd_demo.py  sma_crossover.py
src/spirit/utils/: __init__.py  api_data_provider.py  capability_check.py  composite_data_provider.py  config_loader.py  data_provider.py  data_source.py  db_utils.py  exchange_backed_data_provider.py  feature_engineering.py  kraken_api_client.py  kraken_csv.py  kraken_ohlc_buffer.py  multi_interval_data_source.py  multi_pair_data_source.py  ohlc_catchup.py  order_executor.py  paid_tier_composite.py  pair_registry.py  paper_order_executor.py  pipeline_data_source.py  preflight.py  replay_clock.py  replay_data_source.py  replay_provider_wrapper.py  run_manager.py  sqlite_data_provider.py  strategy_performance_writer.py
