[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spirit-platform"
version = "2.2.4"
description = "Programmable cryptocurrency trading platform — write your own strategies, run on your own hardware"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Tim Ozmen", email = "tim@tradebot.live"}]
keywords = ["cryptocurrency", "trading", "kraken", "algorithmic-trading", "trading-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: System :: Monitoring",
]

# Runtime deps for the Free / Plus framework. Heavy ML / TA / PG-access
# libraries used by the private indicator + scorer modules are intentionally
# omitted — they don't ship in the public mirror.
dependencies = [
    "certifi>=2025.1",
    "charset-normalizer>=3.4",
    "idna>=3.10",
    "krakenex>=2.2",
    "numpy>=2.2",
    "pandas>=2.2",
    "python-dateutil>=2.9",
    "pytz>=2025.2",
    "questionary>=2.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "six>=1.17",
    "ta>=0.11",
    "tzdata>=2025.2",
    "urllib3>=2.4",
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage      = "https://www.tradebot.live"
Portal        = "https://portal.tradebot.live"
Repository    = "https://github.com/timoz10/spirit-platform"
Issues        = "https://github.com/timoz10/spirit-platform/issues"
Documentation = "https://github.com/timoz10/spirit-platform#readme"
Changelog     = "https://github.com/timoz10/spirit-platform/blob/main/CHANGELOG.md"

[project.scripts]
spirit = "spirit.main:main"
spirit-setup = "spirit.setup:main"
spirit-preflight = "spirit.utils.preflight:main"
spirit-uninstall = "spirit.uninstall:main"
spirit-health = "spirit.health:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spirit*"]

[tool.setuptools.package-data]
# Non-Python files shipped inside the wheel.
#
# - *.sql: schema files. Spirit's runtime needs the SQLite schema at first
#   connect; without this glob it lands as orphan source-only and
#   `executescript()` fails with "No such file or directory".
# - *.json: pairs registry. v2.2.4 added boot-time OHLC catchup
#   (`OhlcCatchupRunner` → `dp.get_pairs()`) which reads `pairs.json` from
#   the installed wheel; without the glob the file is dropped silently and
#   catchup self-disables on every customer install. See #796.
"spirit.storage" = ["*.sql", "*.json"]
